--- a/home1.html
+++ b/home1.html
@@ -85,19 +85,10 @@
   			padding: 15px;
 			margin: auto;
   			width: 25%;
-			margin-top: 25px;
 			border-radius: 10px;
 		}
-		.border1{
-			display: block;
-			background-color: lightblue;
-  			width: 100px;
-  			border: 2px solid black;
-			border-top: 0ch;
-  			padding: 15px;
-			margin: auto;
-  			width: 25%;
-			border-radius: 10px;
+		.MrgIt{
+			margin-top: 25px;
 		}
 		input{
 			float: right;
@@ -166,7 +157,7 @@
 		Welcome to the nooble games logIn web page
 		</h1>
 		<img class="center" src="Untitled-1.png" alt="logo">
-		<div class="border" >
+		<div class="border MrgIt" >
 			<p class="p1">
 				:اگر حساب کاربری ندارید ثبت‌نام کنید
 			</p>
@@ -174,7 +165,7 @@
 				.ثبت‌نام کن
 			</a>
 		</div>
-		<div class="border1">
+		<div class="border">
 			<p class="p1"><b>:نام کاربری</b></p>
 			<div class="inputWithIcon">
 				<input id="userName" type="text" name="username" >
